第二天第一次修改

--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -20,7 +20,7 @@
         }
     }
     .login-content{
-        margin: 0 auto;
+        margin: 0 auto;margin-top: 50px;
         padding: 30px;
         width: 400px;
         height: 300px;
@@ -34,7 +34,7 @@
 
         }
         .login-form{
-        
+            
             .login-form-button{
                 width: 100%; 
             }
