--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -51,7 +51,9 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -75,13 +77,12 @@ th {
   padding: 0;
   text-align: left;
 }
-body,html{
-    width: 100%;
-    height: 100%;
-}
-#root{
-  
-    width: 100%;
-    height: 100%;
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
+#root {
+  width: 100%;
+  height: 100%;
 }
